@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-18T01:57:48Z",
+  "timestamp" : "2022-08-18T08:21:48Z",
   "count_outdated" : 290,
   "uniques_outdated" : 177,
-  "count" : 303,
-  "uniques" : 186,
+  "count" : 304,
+  "uniques" : 187,
   "clones" : [
     {
       "timestamp": "2022-08-09T00:00:00Z",
@@ -25,6 +25,13 @@
       "count_minmax": [ 3, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
+    },
+    {
+      "timestamp": "2022-08-18T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
