@@ -1,6 +1,6 @@
 {
-  "count": 13,
-  "uniques": 5,
+  "count": 14,
+  "uniques": 6,
   "clones": [
     {
       "timestamp": "2022-08-09T00:00:00Z",
@@ -16,6 +16,11 @@
       "timestamp": "2022-08-15T00:00:00Z",
       "count": 3,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-08-18T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
